# machinecell-contrib

./: README.md  machinecell-contrib.cabal  machinecell-utils.cabal  stack.yaml
UI/: UI.cabal  stack.yaml  ui.cabal
UI/app/: Main.hs
UI/src/: Types.hs  UI.hs
app/: Main.hs  Results.hs
src/: GetLogs.hs  MachineUtils.hs  ParseCSV.hs  Server.hs  Types.hs
