name:                machinecell-contrib
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/machinecell-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MachineUtils
                     , ParseCSV
  build-depends:       base >= 4.7 && < 5
                     , machinecell
                     , classy-prelude
                     , network
                     , streaming-commons
                     , http-client
                     , resourcet
                     , http-client-tls
                     , http-conduit
                     , ansi-terminal
                     , transformers-base
                     , conduit
                     , http-types
                     , hxt
                     , attoparsec
                     , data-default
                     , servant
                     , aeson
                     , bytestring
                     , servant-server
                     , lucid
                     , http-media
                     , wai
                     , warp
                     , path
                     , time
                     , chunked-data
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/machinecell-utils
