name:                machinecell-utils
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/machinecell-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MachineUtils
                     , GetLogs
                     , ParseCSV
                     , Server
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , machinecell
                     , classy-prelude
                     , network
                     , streaming-commons
                     , http-client
                     , resourcet
                     , http-client-tls
                     , http-conduit
                     , ansi-terminal
                     , transformers-base
                     , conduit
                     , http-types
                     , hxt
                     , attoparsec
                     , data-default
                     , servant
                     , aeson
                     , bytestring
                     , servant-server
                     , lucid
                     , http-media
                     , wai
                     , warp
                     , path
                     , time
  default-language:    Haskell2010

executable get-logs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , machinecell-utils
                     , classy-prelude
                     , warp
                     , path
  default-language:    Haskell2010

executable results
  hs-source-dirs:      app
  main-is:             Results.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , machinecell-utils
                     , classy-prelude
                     , conduit
                     , resourcet
                     , time
                     , data-default
                     , mtl
                     , transformers
                     , filemanip
                     , filepath
  default-language:    Haskell2010

test-suite getlogs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , machinecell-utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/machinecell-utils
